external stylesheets for menu

--- a/00-connorstemplate.html
+++ b/00-connorstemplate.html
@@ -3,7 +3,7 @@
 <head>
 	<title>The Egg Man Cometh - The Infinite Wrench</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="play-style.css">
+	<link rel="stylesheet" type="text/css" href="style-play.css">
 	
 </head>
 <body>
@@ -11,6 +11,3 @@
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/vsOYXw7d-XQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html">back to menu</p></div>
 </body>
-
-
-<!-- width="560" height="315"-->
