update old plays w/ stylesheet; rename v## plays to ##v

--- a/cuts/v12-flattening.html
+++ b/cuts/v12-flattening.html
@@ -92,7 +92,7 @@ height:60%;
 <body>
 	<div class="title">37 Seconds of Flattening the Curve</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/XlH6ItjsU9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
 </body>
 
 
