--- a/cuts/v10-ditto.html
+++ b/cuts/v10-ditto.html
@@ -92,7 +92,7 @@ height:60%;
 <body>
 	<div class="title">DITTO (Michael Wilkins)</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/JP0qFa3_Kis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
 </body>
 
 
