--- a/cuts/v11-clothdoll.html
+++ b/cuts/v11-clothdoll.html
@@ -92,7 +92,7 @@ height:60%;
 <body>
 	<div class="title">Cloth Doll: A Cautionary Tale</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/CnCXLY4c6VI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
 </body>
 
 
