--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
 <p><a href="6v-sexintheshower.html">V6. Sex in the shower doesn't work.</a></p>
 <p><a href="7v-neodollhouse.html">V7. Neo-Dollhouse Theatre Presents: The Exorcist in Three Parts</a></p>
 <p><a href="8v-tinyfilm.html">V8. Tiny Film (not for you)</a></p>
-
+<p><a href="13v-cleanliness.html">V13. CLEANLINESS IS HORNINESS</a></p>
+<p><a href="14v-sheddaquarium.html">V14. Shedd Aquarium Allows Penguins to Roam Free During Quarantine</p></a>
+<p><a href="15v-space.html">V15. Space Is Where I live Now</p></a>
+<p><a href="16v-communion.html">V16. Communion Lives Beyond Walls</a></p>
+<p><a href="17v-aplayfor.html">V17. A play for Alan Ledford</a></p>
+<p><a href="18v-iveneverbeen.html">V18. I've never been a strong swimmer</a></p>
+<p><a href="19v-idontwant.html">V19. I don't want to play in your yard</a></p>
     <br><br>
 </div>
     
