caps on contact box

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
   
   
     <div id="contact" style="text-align: center;">
-            <br><a href="https://neofuturists.secure.force.com/donate/?dfId=a0yU0000000mzshIAA" style="color: #FFE64D;" target="_blank">donate</a><br><br>
-            <a href="https://www.patreon.com/theneofuturists" target="_blank">&nbsp;Become A Patron&nbsp;</a><br><br>
+            <br><a href="https://neofuturists.secure.force.com/donate/?dfId=a0yU0000000mzshIAA" style="color: #FFE64D;" target="_blank">DONATE</a><br><br>
+            <a href="https://www.patreon.com/theneofuturists" target="_blank">&nbsp;BECOME A PATRON&nbsp;</a><br><br>
              <a href="mailto:engagement@neofuturists.org">contact</a><br><br>
-            <a href="https://www.neofuturists.org" target="_blank">neos home</a> <br><br>
+            <a href="https://www.neofuturists.org" target="_blank">NEOS HOME</a> <br><br>
     </div>
 
 
