--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
    
    <p style="display: block;" width="50%;">credits: kirsten nick leah jasmine trent dan connor kate diana john neil ida lily sadbrad bethany john lizi anthony andy kaitlyn devon lucy AND_YOU!!!</p>
    <p><strong>THE NEO-FUTURISTS CHICAGO 2020</strong></p>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <p style="font-size:10px;">A board is just a board...<i>until it's a bench.</i>
     <br><br>
     
     </div>
