titles and shit

--- a/03-imtrying.html
+++ b/03-imtrying.html
@@ -8,5 +8,5 @@
 <body>
 	<div class="title">I'm trying god knows i'm trying</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/M_a62t3er60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
