--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   
     <div id="contact" style="text-align: center;">
             <br><a href="https://neofuturists.secure.force.com/donate/?dfId=a0yU0000000mzshIAA" style="color: #FFE64D;" target="_blank">DONATE</a><br><br>
-            <a href="https://www.patreon.com/theneofuturists" target="_blank">&nbsp;BECOME A PATRON&nbsp;</a><br><br>
+            <a href="https://www.patreon.com/theneofuturists" target="_blank">BECOME A PATRON</a><br><br>
              <a href="mailto:engagement@neofuturists.org">CONTACT</a><br><br>
             <a href="https://www.neofuturists.org" target="_blank">NEOS HOME</a> <br><br>
     </div>
