--- a/02-betterworld.html
+++ b/02-betterworld.html
@@ -8,5 +8,5 @@
 <body>
 	<div class="title">Better World</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/uAD3ZpImlkQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
