--- a/12-insideofleah.html
+++ b/12-insideofleah.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inside of Leah is an alter-ego.  This is what she sounds like.  These are the plays she writes. - The Infinite Wrench</title>
+	<title>Inside of Leah is an alter-ego.  This is what she sounds like.  These are the Screenplays she writes. - The Infinite Wrench</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style-play.css">
 </head>
 <body>
 	<div class="title">Inside of Leah is an alter-ego.  This is what she sounds like.  These are the plays she writes.</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/9Qoeq-7c7Jc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
 
 
