--- a/72-mentalkingabout.html
+++ b/72-mentalkingabout.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="title">Men Talking About the End of the World</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/pYbFbHMg_u8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
 
 
