--- a/85-exercises.html
+++ b/85-exercises.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="title">Exercises for My Shin Splints</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/lracTGDsM7I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
 
 
