--- a/cuts/43-forimmediate.html
+++ b/cuts/43-forimmediate.html
@@ -92,7 +92,7 @@ height:60%;
 <body>
 	<div class="title">For Immediate Press Release</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/qolXe71urYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div id="menu"><p><a href="index.html#playlist">back to menu</p></div>
+	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
 
 
