--- a/index.html
+++ b/index.html
@@ -123,7 +123,24 @@
    
    
    <p style="display: block;" width="50%;">credits: kirsten nick leah jasmine trent dan connor kate diana john neil ida lily sadbrad bethany john lizi anthony andy kaitlyn devon lucy AND_YOU!!!</p>
-   <p><strong>THE NEO-FUTURISTS CHICAGO 2020</strong></p>
+   <p style="font-family: 'Tomorrow', monospace;"><strong>THE NEO-FUTURISTS CHICAGO 2020</strong></p>
+   <p><img src="images/background.png" alt="The Infinite Wrench Goes Viral"></p>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br> 
+   <br><br>
+   <br><br>
+   <br><br>
+   <br><br> 
+   <br><br>
    <br><br>
    <br><br>
    <br><br>
