add 'theater' to our name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1><strong>THE INFINITE WRENCH<br>GOES VIRAL</strong></h1>
         <h2 class="css3-blinker">w/e MARCH.29.2X20</h2>
         <div id="plays" class="css3-blinker2">30 digital plays<br>in 60 analog minutes</div>
-        <div id="plays" class="spit">The Neo-Futurists</h2></div>
+        <div id="plays" class="spit">The Neo-Futurist Theater</h2></div>
  
     
     
