change trent's play title to match his own video

--- a/85-exercises.html
+++ b/85-exercises.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Exercises for My Shin Splints - The Infinite Wrench</title>
+	<title>An Exercise for Shin Splints - The Infinite Wrench</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style-play.css">
 </head>
