--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <p><a href="35-maryoliver.html">35. Mary Oliver, Mary Oliver, Mary Oliver</a></p>
 <p><a href="91-troperevisited.html">91. Trope Revisited Revisited</a></p>
 <p><a href="18-lessthefish.html">18. Less the Fish</a></p>
-<p><a href="85-exercises.html">85. Exercises for My Shin Splints</a></p>
+<p><a href="85-exercises.html">85. An Exercise for Shin Splints</a></p>
 <p><a href="12-insideofleah.html">12. Inside of Leah is an alter-ego. This is what she sounds like. These are the plays she writes.</a></p>
 <p><a href="02-betterworld.html">02. Better World</a></p>
 <p><a href="03-imtrying.html">03. I'm trying god knows i'm trying</a></p>
