--- a/85-exercises.html
+++ b/85-exercises.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style-play.css">
 </head>
 <body>
-	<div class="title">Exercises for My Shin Splints</div>
+	<div class="title">An Exercise for Shin Splints</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/lracTGDsM7I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
