new play links, new header quote

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Masthead -->
     
 <div id="center-menu">
-        <h5>Development and Maintenance: The sourball of every revolution. After the revolution, who's going to pick up the garbage on Monday morning? <br>Oh, I'm sorry, what I meant to say was...</h5>
+        <h5>When culture becomes nothing more than a commodoity, it must also become the sar commodity of the spectacular society.<br>Oh, I'm sorry, what I meant to say was...</h5>
         <h1><strong>THE INFINITE WRENCH<br>GOES VIRAL</strong></h1>
         <h2 class="css3-blinker">w/e MARCH.29.2X20</h2>
         <div id="plays" class="css3-blinker2">30 digital plays<br>in 60 analog minutes</div>
@@ -89,7 +89,7 @@
 <p><a href="14v-sheddaquarium.html">V14. Shedd Aquarium Allows Penguins to Roam Free During Quarantine</p></a>
 <p><a href="15v-space.html">V15. Space Is Where I live Now</p></a>
 <p><a href="16v-communion.html">V16. Communion Lives Beyond Walls</a></p>
-<p><a href="17v-aplayfor.html">V17. A play for Allan Ledford</a></p>
+<p><a href="17v-aplayfor.html">V17. This Play Is For Allen Ledford</a></p>
 <p><a href="18v-iveneverbeen.html">V18. I've never been a strong swimmer</a></p>
 <p><a href="19v-idontwant.html">V19. I don't want to play in your yard</a></p>
     <br><br>
