--- a/14-ghostplay.html
+++ b/14-ghostplay.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="title">Ghost Play</div>
-	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/oLP23z2Q9Mo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/KUpA3RjlvP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
 
