--- a/16v-communion.html
+++ b/16v-communion.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<div class="title">Communion Lives Beyond Walls</div>
-	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/vsOYXw7d-XQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/7jmsNjRhm7s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
