--- a/2v-ourpromise.html
+++ b/2v-ourpromise.html
@@ -7,9 +7,6 @@
 </head>
 <body>
 	<div class="title">"Our Promise To You (Can't Stop. Won't Stop.)"</div>
-	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/_XIBlmoJm74" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/TuHboWv9gPg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
-
-
-<!-- width="560" height="315"-->
