--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Masthead -->
     
 <div id="center-menu">
-        <h5>When culture becomes nothing more than a commodoity, it must also become the sar commodity of the spectacular society.<br>Oh, I'm sorry, what I meant to say was...</h5>
+        <h5>YOU prefer to observe the past on which your eyes are already opened. BUT the Future is only dark from outside.<br>Leap into it—and it EXPLODES with Light. Oh, I'm sorry, what I meant to say was...</h5>
         <h1><strong>THE INFINITE WRENCH<br>GOES VIRAL</strong></h1>
         <h2 class="css3-blinker">w/e MARCH.29.2X20</h2>
         <div id="plays" class="css3-blinker2">30 digital plays<br>in 60 analog minutes</div>
