--- a/90-neocovidasmr.html
+++ b/90-neocovidasmr.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>N E O C O V I D A S M R- The Infinite Wrench</title>
+	<title>N E O C O V I D A S M R ep. 2 - The Infinite Wrench</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style-play.css">
 </head>
 <body>
-	<div class="title">N E O C O V I D A S M R</div>
+	<div class="title">N E O C O V I D A S M R ep. 2</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/nYJ6FT4lz6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
 
