staff credits & title corrections

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <p><a href="13v-cleanliness.html">V13. CLEANLINESS IS HORNINESS</a></p>
 <p><a href="14v-sheddaquarium.html">V14. Shedd Aquarium Allows Penguins to Roam Free During Quarantine</p></a>
 <p><a href="15v-space.html">V15. Space Is Where I live Now</p></a>
-<p><a href="16v-communion.html">V16. Communion Lives Beyond Walls</a></p>
+<p><a href="16v-communion.html">V16. Communion Moves Beyond Walls -Mimi Zhu -Britney Spears</a></p>
 <p><a href="17v-aplayfor.html">V17. This Play Is For Allen Ledford</a></p>
 <p><a href="18v-iveneverbeen.html">V18. I've never been a strong swimmer</a></p>
 <p><a href="19v-idontwant.html">V19. I don't want to play in your yard</a></p>
@@ -122,7 +122,14 @@
 <!--Signature-->
    
    
-   <p style="display: block;" width="50%;">credits: kirsten nick leah jasmine trent dan connor kate diana john neil ida lily sadbrad bethany john lizi anthony andy kaitlyn devon lucy AND_YOU!!!</p>
+   <p style="display: block;" width="50%;"><u>CREDITS:</u> kirsten nick leah jasmine trent dan connor kate diana john neil ida lily sadbrad bethany john lizi anthony andy kaitlyn devon lucy AND_YOU!!!</p><br>
+   <p><u>THE NEO-FUTURIST STAFF:</u><br>
+   kirsten riiber (artistic director)<br> 
+   jorge silva (managing director)<br>
+   anna gelman (operations manager)<br>
+   nick hart (education lead)<br>
+   kate hardiman (lead technician)<br> 
+   connor shioshita pickett (digital design) 
    <p><img src="images/background.png" alt="The Infinite Wrench Goes Viral"></p>
    <p style="font-family: 'Tomorrow', monospace;"><strong>THE NEO-FUTURISTS CHICAGO 2020</strong></p>
    <br><br>
