better title for myself

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
    anna gelman (operations manager)<br>
    nick hart (education lead)<br>
    kate hardiman (lead technician)<br> 
-   connor shioshita pickett (digital design) 
+   connor shioshita pickett (cyberdesign) 
    <p><img src="images/background.png" alt="The Infinite Wrench Goes Viral"></p>
    <p style="font-family: 'Tomorrow', monospace;"><strong>THE NEO-FUTURISTS CHICAGO 2020</strong></p>
    <br><br>
