--- a/07-classicsong.html
+++ b/07-classicsong.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Classic Song with Adjustments for Modern Times - The Infinite Wrench</title>
+	<title>A Classic Song with Adjustments for Modern Times - The Infinite Wrench</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style-play.css">
 </head>
 <body>
-	<div class="title">Classic Song with Adjustments for Modern Times</div>
+	<div class="title">A Classic Song with Adjustments for Modern Times</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/gj4Duoz0ipE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
