--- a/12-eulogy.html
+++ b/12-eulogy.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>eulogy - The Infinite Wrench</title>
+	<title>a eulogy - The Infinite Wrench</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style-play.css">
 </head>
 <body>
-	<div class="title">eulogy</div>
+	<div class="title">a eulogy</div>
 	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/DHrt59CoT_0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
