--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h5>YOU prefer to observe the past on which your eyes are already opened. BUT the Future is only dark from outside.<br>Leap into it—and it EXPLODES with Light. Oh, I'm sorry, what I meant to say was...</h5>
         <h1><strong>THE INFINITE WRENCH<br>GOES VIRAL</strong></h1>
         <h2 class="css3-blinker">w/e MARCH.29.2X20</h2>
-        <div id="plays" class="css3-blinker2">30 digital plays<br>in 60 analog minutes</div>
+        <div id="plays" class="css3-blinker2">30 digital plays<br>in 60 analog minutes</div><br>
         <div id="plays" class="spit">The Neo-Futurist Theater</h2></div>
  
     
@@ -63,10 +63,10 @@
 <p><a href="91-troperevisited.html">91. Trope Revisited Revisited</a></p>
 <p><a href="18-lessthefish.html">18. Less the Fish</a></p>
 <p><a href="85-exercises.html">85. An Exercise for Shin Splints</a></p>
-<p><a href="12-insideofleah.html">12. Inside of Leah is an alter-ego. This is what she sounds like. These are the plays she writes.</a></p>
+<p><a href="12-insideofleah.html">12. Inside of Leah is an alter-ego. This is what she sounds like. These are the screenplays she writes.</a></p>
 <p><a href="02-betterworld.html">02. Better World</a></p>
 <p><a href="03-imtrying.html">03. I'm trying god knows i'm trying</a></p>
-<p><a href="12-eulogy.html">12. eulogy</a></p>
+<p><a href="12-eulogy.html">12. a eulogy</a></p>
 <p><a href="90-neocovidasmr.html">90. N E O C O V I D A S M R ep. 2</a></p>
 <p><a href="72-mentalkingabout.html">72. Men Talking About the End of the World</a></p>
 <p><a href="55-storytellers.html">55. Storytellers Tell Stories</a></p>
@@ -74,14 +74,14 @@
     
     <!--V-series plays-->
 
-<p><a href="1v-whenwemoved.html">V1. When We Moved In Together, We Bought White Sheets</a></p>
-<p><a href="2v-ourpromise.html">V2. "Our Promise To You (Can't Stop. Won't Stop.)"</a></p>
+<p><a href="1v-whenwemoved.html">V1. When We Moved In Together, We Got White Sheets</a></p>
+<p><a href="2v-ourpromise.html">V2. Our Promise To You (Can't Stop. Won't Stop.)</a></p>
 <p><a href="3v-truestories.html">V3. True Stories</a></p>
 <p><a href="4v-edibleaudible.html">V4. Edible, Audible, and Otherwise.</a></p>
 <p><a href="5v-whatilost.html">V5. what I lost during the quarantine</a></p>
-<p><a href="6v-sexintheshower.html">V6. Sex in the shower doesn't work.</a></p>
+<p><a href="6v-sexintheshower.html">V6. sex in the shower doesn't work</a></p>
 <p><a href="7v-neodollhouse.html">V7. Neo-Dollhouse Theatre Presents: The Exorcist in Three Parts</a></p>
-<p><a href="8v-tinyfilm.html">V8. Tiny Film (not for you)</a></p>
+<p><a href="8v-tinyfilm.html">V8. a tiny film. not for you.</a></p>
 
     <!--new this week-->
 
