--- a/90-neocovidasmr.html
+++ b/90-neocovidasmr.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="title">N E O C O V I D A S M R ep. 2</div>
-	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/xd1MndXzQmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div class="youtube-responsive-container"><iframe src="https://www.youtube.com/embed/u576zzdRGgE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	
 	<div id="menu"><p><a href="index.html#playlist">BACK TO MENU</p></div>
 </body>
