credits for menu

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
    <br><br>
    <br><br> 
    <br><br>
+   <p>The Neo-Futurist Theater is partially supported by grants from Alphawood Foundation Chicago, Paul M. Angell Foundation, Arts Work Fund, The Chicago Community Foundation, Gaylord and Dorothy Donnelley Foundation, The Illinois Arts Council Agency, The MacArthur Fund for Arts and Culture at The Richard H. Driehaus Foundation, and The National Endowment for the Arts.</p>
    <br><br>
    <br><br>
    <br><br> 
